package com.santeConnect.domain.entities;

public interface Observer {
    void update();
}
